fixed shadow bug on username input on ios

--- a/components/subcomponents/usernameinput/UsernameInput.module.css
+++ b/components/subcomponents/usernameinput/UsernameInput.module.css
@@ -2,6 +2,7 @@
   width: 300px;
   background-color: #ffffff;
   border: 1px solid #000000;
+  -webkit-appearance: none;
   box-shadow: 3px 8px 10px rgba(0, 0, 0, 0.25);
   font-size: 25px;
   font-weight: 200;
